--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,8 +10,36 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./initdb:/docker-entrypoint-initdb.d
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U bay_user -d betting_db"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  ollama:
+    image: ollama/ollama:latest
+    container_name: bay-ollama
+    ports:
+      - "11434:11434"
+    volumes:
+      - ollama_data:/root/.ollama
+    restart: unless-stopped
+    entrypoint: ["/bin/sh", "-c"]
+    command: >
+      "ollama serve & 
+      sleep 5; 
+      if ! ollama list | grep -q 'llama3.2:1b'; then 
+        ollama pull llama3.2:1b; 
+      fi; 
+      wait"
+    healthcheck:
+      test: ["CMD-SHELL", "ollama list | grep -q 'llama3.2:1b' || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 60s
 
 volumes:
   postgres_data:
+  ollama_data:
