--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,3 @@
 SECRET_KEY=your-secret-key-here
-ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=30
-DATABASE_URL=postgresql://user:password@localhost:5432/betting_db
-TEST_DATABASE_URL=postgresql://user:password@localhost:5432/betting_test_db
-RATELIMIT_ENABLED=True
-LLAMA_API_URL=http://localhost:11434
+DATABASE_URL=postgresql://bay_user:bay_password@localhost:5432/betting_db
+TEST_DATABASE_URL=postgresql://bay_user:bay_password@localhost:5432/betting_test_db
