--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,48 +1,56 @@
-annotated-doc==0.0.4
-annotated-types==0.7.0
-anyio==3.7.1
-bcrypt==3.1.7
-certifi==2025.11.12
-cffi==2.0.0
-click==8.3.1
-colorama==0.4.6
-cryptography==46.0.3
-Deprecated==1.3.1
-dnspython==2.8.0
-ecdsa==0.19.1
-email-validator==2.0.0
+# --- Core Framework ---
 fastapi==0.128.0
-greenlet==3.3.0
-h11==0.16.0
-httpcore==1.0.9
-httptools==0.7.1
-idna==3.11
-iniconfig==2.3.0
-limits==5.8.0
-packaging==25.0
-passlib==1.7.4
-pluggy==1.6.0
-psycopg2-binary==2.9.11
-pyasn1==0.6.1
-pycparser==2.23
+starlette==0.50.0
+uvicorn==0.40.0
+gunicorn==21.2.0
 pydantic==2.12.0
 pydantic-settings==2.1.0
 pydantic_core==2.41.1
-Pygments==2.19.2
-pytest==9.0.2
-python-dotenv==1.0.0
-python-jose==3.3.0
-python-multipart==0.0.6
-PyYAML==6.0.3
-rsa==4.9.1
-six==1.17.0
-slowapi==0.1.9
-sniffio==1.3.1
+
+# --- Database ---
 SQLAlchemy==2.0.45
-starlette==0.50.0
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-uvicorn==0.40.0
-watchfiles==1.1.1
+psycopg2-binary==2.9.11
+
+# --- Authentication & Security ---
+passlib==1.7.4
+bcrypt==3.1.7
+python-jose==3.3.0
+cryptography==46.0.3
+ecdsa==0.19.1
+rsa==4.9.1
+pyasn1==0.6.1
+certifi==2025.11.12
+
+# --- Networking & HTTP ---
+httpx==0.28.1
+httpcore==1.0.9
+h11==0.16.0
+httptools==0.7.1
 websockets==15.0.1
+dnspython==2.8.0
+idna==3.11
+
+# --- Utilities ---
+python-dotenv==1.0.0
+python-multipart==0.0.6
+email-validator==2.0.0
+slowapi==0.1.9
+limits==5.8.0
+Deprecated==1.3.1
 wrapt==2.1.1
+PyYAML==6.0.3
+annotated-types==0.7.0
+annotated-doc==0.0.4
+packaging==25.0
+six==1.17.0
+
+# --- Low-Level / Transitive ---
+anyio==3.7.1
+cffi==2.0.0
+click==8.3.1
+colorama==0.4.6
+greenlet==3.3.0
+pycparser==2.23
+sniffio==1.3.1
+typing_extensions==4.15.0
+typing-inspection==0.4.2
