--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
 SECRET_KEY=your-secret-key-here
 DATABASE_URL=postgresql://bay_user:bay_password@localhost:5432/betting_db
 TEST_DATABASE_URL=postgresql://bay_user:bay_password@localhost:5432/betting_test_db
+ADMIN_PASSPHRASE=your-admin-passphrase-here
