challenge status overhaul

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -4,3 +4,6 @@
 filterwarnings =
     ignore::DeprecationWarning:slowapi.extension
     ignore::DeprecationWarning:jose.jwt
+
+env_files =
+    .env.test
