--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,11 @@ pydantic_core==2.41.1
 SQLAlchemy==2.0.45
 psycopg2-binary==2.9.11
 
+# --- LangChain ---
+langchain==1.2.10
+langchain-groq==1.1.2
+langgraph==1.0.9
+
 # --- Authentication & Security ---
 passlib==1.7.4
 bcrypt==3.1.7
